@@ -6,6 +6,7 @@
  */
 
 use WCPay\MultiCurrency\Currency;
+use WCPay\MultiCurrency\Compatibility;
 use WCPay\MultiCurrency\FrontendCurrencies;
 use WCPay\MultiCurrency\MultiCurrency;
 use WCPay\MultiCurrency\Utils;
@@ -22,6 +23,13 @@ class WCPay_Multi_Currency_Frontend_Currencies_Tests extends WP_UnitTestCase {
 	 * @var WC_Payments_Localization_Service|PHPUnit_Framework_MockObject_MockObject
 	 */
 	private $mock_localization_service;
+
+	/**
+	 * Mock Compatibility.
+	 *
+	 * @var Compatibility|PHPUnit_Framework_MockObject_MockObject
+	 */
+	private $mock_compatibility;
 
 	/**
 	 * Mock MultiCurrency.
@@ -48,11 +56,12 @@ class WCPay_Multi_Currency_Frontend_Currencies_Tests extends WP_UnitTestCase {
 		parent::setUp();
 
 		$this->mock_localization_service = $this->createMock( WC_Payments_Localization_Service::class );
+		$this->mock_compatibility        = $this->createMock( Compatibility::class );
 		$this->mock_multi_currency       = $this->createMock( MultiCurrency::class );
 		$this->mock_utils                = $this->createMock( Utils::class );
 		$this->mock_order                = WC_Helper_Order::create_order();
 
-		$this->frontend_currencies = new FrontendCurrencies( $this->mock_multi_currency, $this->mock_localization_service, $this->mock_utils );
+		$this->frontend_currencies = new FrontendCurrencies( $this->mock_multi_currency, $this->mock_localization_service, $this->mock_utils, $this->mock_compatibility );
 	}
 
 	public function tearDown() {
@@ -83,9 +92,26 @@ class WCPay_Multi_Currency_Frontend_Currencies_Tests extends WP_UnitTestCase {
 		];
 	}
 
-	public function test_get_woocommerce_currency() {
-		$current_currency = new Currency( 'USD' );
-		$this->mock_multi_currency->method( 'get_selected_currency' )->willReturn( $current_currency );
+	public function test_get_woocommerce_currency_returns_selected_currency() {
+		$store_currency    = new Currency( 'USD' );
+		$selected_currency = new Currency( 'EUR' );
+		$this->mock_multi_currency->method( 'get_default_currency' )->willReturn( $store_currency );
+		$this->mock_multi_currency->method( 'get_selected_currency' )->willReturn( $selected_currency );
+
+		$this->mock_multi_currency->method( 'get_selected_currency' )->willReturn( $selected_currency );
+		$this->mock_compatibility->method( 'should_return_store_currency' )->willReturn( false );
+
+		$this->assertSame( 'EUR', $this->frontend_currencies->get_woocommerce_currency() );
+	}
+
+	public function test_get_woocommerce_currency_returns_store_currency() {
+		$store_currency    = new Currency( 'USD' );
+		$selected_currency = new Currency( 'EUR' );
+		$this->mock_multi_currency->method( 'get_default_currency' )->willReturn( $store_currency );
+		$this->mock_multi_currency->method( 'get_selected_currency' )->willReturn( $selected_currency );
+
+		$this->mock_multi_currency->method( 'get_selected_currency' )->willReturn( $selected_currency );
+		$this->mock_compatibility->method( 'should_return_store_currency' )->willReturn( true );
 
 		$this->assertSame( 'USD', $this->frontend_currencies->get_woocommerce_currency() );
 	}
